<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="co.id.exml.logistikdr.ActivityLogin" >

    <ScrollView
        android:fillViewport="true"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <RelativeLayout
                android:layout_gravity="top"
                android:id="@+id/cpm_activity_login_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin" >

                <ImageView
                    android:id="@+id/cpm_activity_login_logo"
                    android:layout_width="150dip"
                    android:layout_height="150dip"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="6dip"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:singleLine="true"
                    android:src="@drawable/cover" />

                <EditText
                    android:id="@+id/cpm_activity_login_username"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/cpm_activity_login_logo"
                    android:hint="@string/activity_login_username"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/cpm_activity_login_password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/cpm_activity_login_username"
                    android:hint="@string/activity_login_password"
                    android:inputType="textPassword"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:singleLine="true" />

                <Button
                    android:id="@+id/cpm_activity_login_button_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/cpm_activity_login_password"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:singleLine="true"
                    android:text="@string/activity_login_button_login" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="bottom"
                android:layout_marginTop="20dip"
                android:layout_marginBottom="20dip"
                android:padding="4dip" >

                <TextView
                    android:id="@+id/exml_company"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:text="@string/exml_company"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"
                    android:textColor="#333333" />

                <TextView
                    android:id="@+id/client_company"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/exml_company"
                    android:layout_alignLeft="@+id/exml_company"
                    android:gravity="center"
                    android:text="@string/tagline"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead.Inverse"
                    android:textColor="#333333" />

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>