<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:id="@+id/cpm_activity_cam_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin" >

                <ImageView
                    android:id="@+id/cpm_activity_cam_preview"
                    android:layout_width="250dip"
                    android:layout_height="250dip"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="6dip"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:singleLine="true"
                    android:src="@drawable/cover" />

                <RelativeLayout
                    android:id="@+id/cpm_activity_cam_status_block"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/cpm_activity_cam_preview" >

                    <EditText
                        android:id="@+id/cpm_activity_cam_status_block_status"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_toLeftOf="@+id/cpm_activity_cam_status_btn"
                        android:editable="false"
                        android:hint="@string/activity_cam_status"
                        android:paddingBottom="@dimen/activity_vertical_margin"
                        android:paddingLeft="@dimen/activity_horizontal_margin"
                        android:paddingRight="@dimen/activity_horizontal_margin"
                        android:paddingTop="@dimen/activity_vertical_margin"
                        android:singleLine="true" />

                    <Button
                        android:id="@+id/cpm_activity_cam_status_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBaseline="@+id/cpm_activity_cam_status_block_status"
                        android:layout_alignParentRight="true"
                        android:paddingBottom="@dimen/activity_vertical_margin"
                        android:paddingLeft="@dimen/activity_horizontal_margin"
                        android:paddingRight="@dimen/activity_horizontal_margin"
                        android:paddingTop="@dimen/activity_vertical_margin"
                        android:singleLine="true"
                        android:text="@string/activity_cam_status_btn" />
                </RelativeLayout>

                <EditText
                    android:id="@+id/cpm_activity_cam_keterangan"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/cpm_activity_cam_status_block"
                    android:hint="@string/activity_cam_destripciotn"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:singleLine="false" />

                <Button
                    android:id="@+id/cpm_activity_cam_button_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/cpm_activity_cam_keterangan"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:singleLine="true"
                    android:text="@string/activity_cam_btn" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>